--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   provision:
     runs-on: ubuntu-latest
+    outputs:
+      runner_ip: ${{ env.RUNNER_IP }}
+      droplet_id: ${{ env.DROPLET_ID }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
@@ -62,3 +65,94 @@ jobs:
         run: |
           doctl compute firewall add-rules ${{ env.FW_ID }} \
             --inbound-rules "protocol:tcp,ports:8000,address:${{ env.RUNNER_IP }}/32"
+
+      - name: Poll API until health check responds as expected
+        run: |
+          echo "Waiting for FastAPI service to start..."
+          MAX_ATTEMPTS=60
+          ATTEMPT=0
+          
+          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+            if curl -s -f "http://${{ env.DROPLET_IP }}:8000/health" | grep -q "ok"; then
+              echo "Service is ready"
+              break
+            fi
+            ATTEMPT=$((ATTEMPT + 1))
+            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS: Service not ready yet, waiting 10 seconds..."
+            sleep 10
+          done
+          
+          if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
+            echo "ERROR: Service did not become ready within $MAX_ATTEMPTS attempts"
+            exit 1
+          fi
+      
+      - name: Test API connection
+        run: |
+          TEST_DIFF="diff --git a/test.py b/test.py
+          +def hello():
+          +    return 'Hello World'"
+          
+          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST "http://${{ env.DROPLET_IP }}:8000/generate-test" \
+            -H "Content-Type: application/json" \
+            -H "X-API-Key: ${{ secrets.LLM_API_KEY }}" \
+            -d "{\"diff\": \"$TEST_DIFF\"}")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | head -n-1)
+          
+          echo "HTTP Status Code: $HTTP_CODE"
+          echo "Response: $(echo "$BODY" | head -c 500)"
+          
+          if [ "$HTTP_CODE" != "200" ]; then
+            echo "ERROR: API test failed with status code $HTTP_CODE"
+            echo "Response: $BODY"
+            exit 1
+          fi
+          
+          if echo "$BODY" | grep -q "generated_code"; then
+            echo "Service is responding correctly."
+          else
+            echo "Response doesn't contain 'generated_code' field"
+            echo "Response: $BODY"
+            exit 1
+          fi
+          
+ cleanup:
+    runs-on: ubuntu-latest
+    needs: provision
+    if: always()
+    steps:
+      - name: Install doctl (Digital Ocean CLI)
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_TOKEN }}
+
+      - name: Remove firewall rule
+        run: |
+          FIREWALL_ID=$(doctl compute firewall list --format ID,Name --no-header | grep "LocalAccess" | awk '{print $1}')
+          RUNNER_IP="${{ needs.provision.outputs.runner_ip }}"
+          
+          echo "Removing firewall rule for IP: $RUNNER_IP"
+          doctl compute firewall remove-rules $FIREWALL_ID \
+            --inbound-rules "protocol:tcp,ports:8000,address:$RUNNER_IP/32" || \
+          echo "Warning: Failed to remove firewall rule (may not exist)"
+
+      - name: Delete GPU Droplet
+        if: always()
+        run: |
+          DROPLET_ID="${{ needs.provision.outputs.droplet_id }}"
+          
+          if [ -n "$DROPLET_ID" ] && [ "$DROPLET_ID" != "" ]; then
+            echo "Deleting droplet: $DROPLET_ID"
+            doctl compute droplet delete $DROPLET_ID --force || echo "Warning: Failed to delete droplet"
+          else
+            echo "No droplet ID found, searching by name..."
+            DROPLET_ID=$(doctl compute droplet list --format ID,Name --no-header | grep "ai-worker-${{ github.sha }}" | awk '{print $1}' | head -1)
+            if [ -n "$DROPLET_ID" ]; then
+              echo "Found and deleting droplet: $DROPLET_ID"
+              doctl compute droplet delete $DROPLET_ID --force || echo "Warning: Failed to delete droplet"
+            else
+              echo "No droplet found to delete"
+            fi
+          fi
