--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -102,15 +102,6 @@ jobs:
           
           if [ "$HTTP_CODE" != "200" ]; then
             echo "ERROR: API test failed with status code $HTTP_CODE"
-            echo "Response: $BODY"
-            exit 1
-          fi
-          
-          if echo "$BODY" | grep -q "generated_code"; then
-            echo "Service is responding correctly."
-          else
-            echo "Response doesn't contain 'generated_code' field"
-            echo "Response: $BODY"
             exit 1
           fi
 
@@ -119,7 +110,7 @@ jobs:
     needs: provision
     if: always()
     steps:
-      - name: Install doctl (Digital Ocean CLI)
+      - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DO_TOKEN }}
@@ -128,27 +119,12 @@ jobs:
         run: |
           FIREWALL_ID=$(doctl compute firewall list --format ID,Name --no-header | grep "LocalAccess" | awk '{print $1}')
           RUNNER_IP="${{ needs.provision.outputs.runner_ip }}"
-            
-          echo "Removing firewall rule for IP: $RUNNER_IP"
           doctl compute firewall remove-rules $FIREWALL_ID \
-            --inbound-rules "protocol:tcp,ports:8000,address:$RUNNER_IP/32" || \
-          echo "Warning: Failed to remove firewall rule (may not exist)"
+            --inbound-rules "protocol:tcp,ports:8000,address:$RUNNER_IP/32" || echo "Rule already gone"
 
       - name: Delete GPU Droplet
-        if: always()
         run: |
           DROPLET_ID="${{ needs.provision.outputs.droplet_id }}"
-            
-          if [ -n "$DROPLET_ID" ] && [ "$DROPLET_ID" != "" ]; then
-            echo "Deleting droplet: $DROPLET_ID"
-            doctl compute droplet delete $DROPLET_ID --force || echo "Warning: Failed to delete droplet"
-          else
-            echo "No droplet ID found, searching by name..."
-            DROPLET_ID=$(doctl compute droplet list --format ID,Name --no-header | grep "ai-worker-${{ github.sha }}" | awk '{print $1}' | head -1)
-            if [ -n "$DROPLET_ID" ]; then
-              echo "Found and deleting droplet: $DROPLET_ID"
-              doctl compute droplet delete $DROPLET_ID --force || echo "Warning: Failed to delete droplet"
-            else
-              echo "No droplet found to delete"
-            fi
+          if [ -n "$DROPLET_ID" ]; then
+            doctl compute droplet delete $DROPLET_ID --force
           fi
