--- a/.github/workflows/ai-playwright.yml
+++ b/.github/workflows/ai-playwright.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   ai-playwright:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v5
