Exclude versions directory from diff analysis

--- a/.github/workflows/ai-playwright.yml
+++ b/.github/workflows/ai-playwright.yml
@@ -22,3 +22,4 @@ jobs:
           llm-api-key: ${{ secrets.LLM_API_KEY }}
           llm-host: ${{ secrets.LLM_HOST }}
           model-id: ${{ secrets.MODEL_NAME }}
+          exclude-pattern: ^versions/
