--- a/.github/workflows/ai-playwright.yml
+++ b/.github/workflows/ai-playwright.yml
@@ -23,3 +23,6 @@ jobs:
           llm-host: ${{ secrets.LLM_HOST }}
           model-id: ${{ secrets.MODEL_NAME }}
           exclude-pattern: ^versions/
+          include-existing-tests: 'true' 
+          test-file-suffixes: '.spec,.test,.e2e,.playwright'
+          test-file-roots: 'src,app,packages/app'
