Test including source files

--- a/.github/workflows/ai-playwright.yml
+++ b/.github/workflows/ai-playwright.yml
@@ -24,5 +24,6 @@ jobs:
           model-id: ${{ secrets.MODEL_NAME }}
           exclude-pattern: ^versions/
           include-existing-tests: 'true' 
+          include-source-files: 'true'
           test-file-suffixes: '.spec'
           test-file-roots: 'app/e2e'
